crates/descar-core/tests/snapshots/type_checker_snapshot_tests__incompatible_u16_to_i32.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "!tc.is_assignable(&Type::U16, &Type::I32)"
---
true
