crates/descar-core/tests/snapshots/type_checker_snapshot_tests__logical_operations_invalid.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2012,
        ),
        message: "Logical operator 'Or' requires boolean operands types, found i32 and bool",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 1,
                column: 6,
                offset: 5,
                index: 5,
                utf8_offset: 5,
                code_point_offset: 5,
            },
            end: SourceLocation {
                line: 1,
                column: 8,
                offset: 7,
                index: 7,
                utf8_offset: 7,
                code_point_offset: 7,
            },
        },
        help: None,
    },
]
