crates/descar-core/tests/snapshots/type_checker_snapshot_tests__non_function_variable_call.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: errors
---
[
    TypeError {
        code: Some(
            E2027,
        ),
        message: "Undefined function: 'x'",
        span: SourceSpan {
            file_path: "test.vn",
            start: SourceLocation {
                line: 2,
                column: 5,
                offset: 23,
                index: 23,
                utf8_offset: 23,
                code_point_offset: 23,
            },
            end: SourceLocation {
                line: 2,
                column: 6,
                offset: 24,
                index: 24,
                utf8_offset: 24,
                code_point_offset: 24,
            },
        },
        help: None,
    },
]
