crates/descar-core/tests/snapshots/type_checker_snapshot_tests__nullptr_to_array.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.is_assignable(&Type::NullPtr, &array_ty)"
---
true
