crates/descar-core/tests/snapshots/type_checker_snapshot_tests__promote_i32_to_f64.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.promote_numeric_types(&Type::I32, &Type::F64)"
---
F64
