crates/descar-core/tests/snapshots/type_checker_snapshot_tests__promote_i8_to_i16.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.promote_numeric_types(&Type::I8, &Type::I16)"
---
I16
