crates/descar-core/tests/snapshots/type_checker_snapshot_tests__promote_u32_to_u64.snap
---
source: crates/descar-core/tests/type_checker_snapshot_tests.rs
expression: "tc.promote_numeric_types(&Type::U32, &Type::U64)"
---
U64
